# dozer-python

./: .buildinfo  .gitignore  LICENSE  README.md  common_pb2.py  common_pb2_grpc.py  dozer.html  genindex.html  index.html  ingest_pb2.py  ingest_pb2_grpc.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  types_pb2.py
.doctrees/: dozer.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: docs.yaml  tests.yaml
_modules/: index.html
_modules/dozer/: api.html  helper.html  ingest.html
_sources/: dozer.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/: conf.py
dozer/: __init__.py  api.py  common_pb2.py  common_pb2_grpc.py  health_pb2.py  health_pb2_grpc.py  helper.py  ingest.py  ingest_pb2.py  ingest_pb2_grpc.py  types_pb2.py
example/: authorization.py
protos/: common.proto  types.proto
pydozer/: api.py  auth.py  auth_pb2.py  auth_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  health_pb2_grpc.py  helper.py  ingest.py  ingest_pb2.py  ingest_pb2_grpc.py  types_pb2.py
scripts/: build.sh
tests/: __init__.py  constants.py  dozer-config.yaml  helper.py  test_api.py  test_dozer.py  test_ingest.py  test_insert_query.py  trips.json  trips_arrow.json  trips_small.parquet
